Changelog
=========


3.8.4 (unreleased)
------------------

- Load the tabbedview itself async. [Rotonen]


3.8.3 (2017-08-02)
------------------

- Fix: Avoid calculating action menu buttons three times. [buchi]


3.8.2 (2017-06-27)
------------------

- Fix: no longer render the viewname as html on the fallback view. [mathias.leimgruber]


3.8.1 (2017-04-24)
------------------

- Refactor DefaultGridStateStorageKeyGenerator to improve overridable in more
  specific implemnetations.
  [elioschmutz]


3.8.0 (2017-03-22)
------------------

- Append action object name/id to CSS classes in folder action menus. [Rotonen]


3.7.2 (2017-03-13)
------------------

- Fix cachekey / defaulttab generation for anonymous users. [jone]


3.7.1 (2017-03-13)
------------------

- Fix error when calculating etag value on non-tabbedview. [jone]


3.7.0 (2017-03-02)
------------------

- Add plone.app.caching etag value adapter containing the users default tab.
  In order to benefit from that, you need to update your caching configuration.
  See the readme for instructions. [jone]


3.6.2 (2017-03-02)
------------------

- Fix default tab for HTTPS. [mbaechtold]


3.6.1 (2017-03-01)
------------------

- Fix default tab for HTTPS. [jone]


3.6.0 (2016-12-06)
------------------

- Change markup of batching so it can be styled more easily.
  [mbaechtold]

- Template API breakage - renamed slot 'content-title' to 'tabbedview-content-title'
  [Rotonen]

- Minor Chameleon compatibility fixes.
  [Rotonen]


3.5.4 (2016-10-18)
------------------

- Fix tabbedview history.
  [Kevin Bieri]


3.5.3 (2016-09-27)
------------------

- Fix NameError in tabebdview macros. [jone]


3.5.2 (2016-09-26)
------------------

- Chameleon support: make macros access lazy. [jone]

- Check for searchbox value when a tabbedview page gets reloaded.
  [phgross]


3.5.1 (2016-08-23)
------------------

- Extract tabbedview's allowed attributes in to an interface.
  [phgross]
