@@ -5,6 +5,8 @@ Changelog
 3.8.4 (unreleased)
 ------------------
 
+- Use classes instead ids for batching-template to prevent duplicated ids [elioschmutz]
+
 - Load the tabbedview itself async. [Rotonen]
 
 
